--- a/3_Counter/visists_Crash/docker-compose.yml
+++ b/3_Counter/visists_Crash/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     redis-server:
         image: 'redis'
     node-app:
+        restart: on-failure #always
         build: .
         ports:
             - "4002:8082"
