--- a/17_Java_Docker_In_Maven/fleetman-webapp/src/main/docker/Dockerfile
+++ b/17_Java_Docker_In_Maven/fleetman-webapp/src/main/docker/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Avinash Tiwari "qwe123kids@gmail.com"
 
 WORKDIR /usr/local/bin/
 
-ADD ./target/fleetman-0.0.1-SNAPSHOT.jar webapp.jar
+ADD maven/fleetman-0.0.1-SNAPSHOT.jar webapp.jar
 
 EXPOSE 8080
 
