--- a/18_Java_Docker_Compose/fleetman-webapp/docker-compose.yaml
+++ b/18_Java_Docker_Compose/fleetman-webapp/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - fleetman-network
     ports:
       - 80:8080
+    depends_on:
+      - database
 
   database:
     image: mysql:5
@@ -18,4 +20,4 @@ services:
 
 network:
   fleetman-network:
-  
+
